Criei a página inicial e o CSS

--- a/siteAcademia.html
+++ b/siteAcademia.html
@@ -4,8 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academia HTML5</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    
+    <header>
+        <img class="imgLogo" src="Imagens/HalteresSeusHabitosTopo.png" alt="Imagem Halteres seus Habitos">
+
+        <address class="ender">
+                Estrada do puxa ferro, 12
+                <br>
+                Tel: (21) 91234-5678
+                <br>
+                <a href="mailto:contato@halterhabit.com.br">contato@halterhabit.com.br</a>
+        </address>
+
+    </header>
+
+    <nav>
+        <ul class="nav">
+            <li>
+                <a href="HalteresSeusHabitos.html">Apresentação</a>
+            </li>
+
+            <li>
+                <a href="Planos.html">Planos</a>
+            </li>
+
+            <li>
+                <a href="Equipamentos.html">Equipamentos</a>
+            </li>
+
+            <li>
+                <a href="Inscricao.html">Inscrição</a>
+            </li>
+        </ul>
+    </nav>
+
+    <section class="apres">
+        <img src="Imagens/HalteresSeusHabitosLogo.png" alt="Logo da Academia">
+        <p>
+            Faça exercícios e tenha mais saúde e disposição!
+        </p>
+    </section>
+
 </body>
 </html>
