Enviando todos os documentos

--- a/HalteresSeusHabitos.html
+++ b/HalteresSeusHabitos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academia HTML5</title>
+    <title>Halteres Seus Habitos</title>
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
@@ -21,7 +21,7 @@
     </header>
 
     <nav>
-        <ul class="nav">
+        <ul>
             <li>
                 <a href="HalteresSeusHabitos.html">Apresentação</a>
             </li>
