Arrumando erros de digitação

--- a/Inscricao.html
+++ b/Inscricao.html
@@ -140,7 +140,7 @@
                 <div class="ColLabCrd">
                     <label for="Bandeira">
                         <label for="Visa">
-                            <input type="radio" id="Visa" name="Bandeira" value="Vias">Visa
+                            <input type="radio" id="Visa" name="Bandeira" value="Visa">Visa
                         </label>
 
                         <label for="Master">
